@@ -144,6 +144,9 @@ o - New program printass to print entries in users/cdb, users/assign file
 - 26/12/2023
 81. qlocal_upgrade.in: Fix symbolic link TLS_CIPHER_LIST in
     control/global_vars to point to control/servercipherlist
+- 29/12/2023
+82. svctool: use split from conf-split, bigtodo=0 when creating queue
+83. qlocal_upgrade: fixed cron copying cron config
 
 * Tue Oct 17 2023 18:34:04 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.5-1.1%{?dist}
 Release 3.0.5-1.1 Start 11/09/2023 End 17/10/2023
